--- a/respo/service-feign-dev.yml
+++ b/respo/service-feign-dev.yml
@@ -4,8 +4,8 @@
 #      defaultZone: http://peer1:8761/eureka/
 ##      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/
 ##      defaultZone: http://peer1:8761/eureka/,http://peer2:8762/eureka/,http://peer3:8763/eureka/
-#server:
-#  port: 8768
+server:
+  port: 8768
 #spring:
 #  application:
 #    name: service-feign
